--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -60,7 +60,7 @@ input::placeholder {
     ;
 }
 
-.loader-div {
+.loader-div .end-loader-div {
     margin-block: 48px;
     text-align: center;
 }
@@ -86,6 +86,37 @@ input::placeholder {
     }
 }
 
+.end-loader {
+    width: 100%;
+    height: 4.8px;
+    display: inline-block;
+    position: relative;
+    background: rgba(255, 255, 255, 0.15);
+    overflow: hidden;
+}
+
+.end-loader::after {
+    content: '';
+    box-sizing: border-box;
+    width: 0;
+    height: 4.8px;
+    background: #FFF;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: animFw 10s linear infinite;
+}
+
+@keyframes animFw {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 100%;
+    }
+
+}
 
 .hidden {
     display: none;
@@ -131,6 +162,12 @@ input::placeholder {
 
 }
 
-.more-search {
+.load-more-btn-div {
+    text-align: center;
+}
+
+.load-more-btn {
     width: 126px;
+    margin: 0 auto;
+    /* display: block; */
 }
